--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nomon": "nodemon server.js"
+    "nomon": "nodemon server.js",
+    "hero": "git push heroku master"
   },
+  "engines": {
+    "node": ">=11.0.0",
+    "npm": ">=6.4.0"
+    },
   "author": "Juanma Romero",
   "license": "ISC",
   "dependencies": {
